--- a/src/style/PlayGround.module.css
+++ b/src/style/PlayGround.module.css
@@ -2,3 +2,16 @@
   display:flex;
   justify-content: space-around;
 }
+
+.revealing {
+  opacity : 0;
+  transition : opacity 1.5s;
+  opacity : 1;
+  transform: scale(2);
+}
+
+.revealed {
+  transition : opacity 1.5s;
+  opacity : 0;
+  transform: scale(2);
+}
