--- a/src/style/EventCard.module.css
+++ b/src/style/EventCard.module.css
@@ -1,6 +1,6 @@
 .card {
     height:120px;
-    width:200px;
+    width:170px;
     border-radius:15px;
     border: solid 2px black;
     background-color: rgb(100,100,100);
@@ -8,11 +8,20 @@
     margin: 5px;
     color:white;
     text-align: center;
+    font-size: 14px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .name {
     font-weight: 100;
-    font-size: 20px;
+    margin:10px 0
+}
+
+.year {
+    margin:0;
+    font-size:20px;
 }
 
 .selection {
@@ -20,10 +29,11 @@
     cursor:pointer;
 }
 
-.year {
+.toBeRevealed {
+    opacity:0;
     transition : opacity 1.5s;
 }
 
 .revealing {
-    opacity:0;
+    opacity:1 !important;
 }
