--- a/src/style/PlayGround.module.css
+++ b/src/style/PlayGround.module.css
@@ -1,23 +1,31 @@
+.playground {
+  margin-top:50px;
+}
+
 .list {
-  display:flex;
-  justify-content: space-around;
+  display: flex;
+  justify-content: center;
 }
 
 .revealing {
-  opacity : 0;
-  transition : opacity 1.5s;
-  opacity : 1;
-  transform: scale(2);
   position: absolute;
-  top : 250px;
-  left:calc(50% - 200px);
+  top: 0;
+  width: 100%;
+  height:100%;
+  display:grid;
 }
 
-.revealed {
-  transition : opacity 1.5s;
-  opacity : 0;
+.revealingElement {
+  position:relative;
+  justify-self: center;
+  top:75%;
   transform: scale(2);
-  position: absolute;
-  top : 250px;
-  left:calc(50% - 200px);
+}
+
+.result {
+  width:100%;
+  height:100%;
+  text-align: center;
+  vertical-align: center;
+  font-size:50px;
 }
